--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,7 @@ main {
     font-family: var(--font);
     background-color: var(--colors-white);
     display: flex;
+    height: 100%;
     justify-content: center;
 }
 
